--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tabac-laser-centre</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Centre-Tabac.fr</title>
+    <meta name="author" content="Lucas BOUYSSET - SAS TATERAPI" />
     <meta property="og:image" content="/og-image.png" />
   </head>
+<!--
 
+░█████╗░███████╗███╗░░██╗████████╗██████╗░███████╗░░░░░░████████╗░█████╗░██████╗░░█████╗░░█████╗░
+██╔══██╗██╔════╝████╗░██║╚══██╔══╝██╔══██╗██╔════╝░░░░░░╚══██╔══╝██╔══██╗██╔══██╗██╔══██╗██╔══██╗
+██║░░╚═╝█████╗░░██╔██╗██║░░░██║░░░██████╔╝█████╗░░█████╗░░░██║░░░███████║██████╦╝███████║██║░░╚═╝
+██║░░██╗██╔══╝░░██║╚████║░░░██║░░░██╔══██╗██╔══╝░░╚════╝░░░██║░░░██╔══██║██╔══██╗██╔══██║██║░░██╗
+╚█████╔╝███████╗██║░╚███║░░░██║░░░██║░░██║███████╗░░░░░░░░░██║░░░██║░░██║██████╦╝██║░░██║╚█████╔╝
+░╚════╝░╚══════╝╚═╝░░╚══╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░░░░░░░╚═╝░░░╚═╝░░╚═╝╚═════╝░╚═╝░░╚═╝░╚════╝░
+
+
+ /!\ Ce code est la propriété de Tatérapi Laser - il est inutile d'examiner sa composition. /!\ 
+
+ Toute reproduction ou imitation est strictement interdite.
+    
+ Propulsé par SAS TATERAPI.
+
+-->
   <body>
     <div id="root"></div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
