--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centre-Tabac.fr</title>
     <meta name="author" content="Lucas BOUYSSET - SAS TATERAPI" />
+    <meta name="description" content="Votre sevrage tabagique en une séance au Laser avec Centre-Tabac Laser !" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 <!--
